--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Erick Bernardo Téquiz Merchán</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:erick.tequiz@yachaytech.edu.ec">erick.tequiz@yachaytech.edu.ec</a></div>
             
             <section class="box">
                 <h2>
