--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Yachay Tech University
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Bachelor</h3>
                     <ul>
                         <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>3 years</li>
                     </ul>
                 </div>
             </section>
