Update Html GPA - Internships

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                     </h2>
                     <h3>Bachelor</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 3.5</li>
                         <li>3 years</li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>TALOV S.A.</h3>
                 <ul>
                     <li>Accomplishment</li>
                     <li>Another accomplishment</li>
