--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Erick Téquiz - Resume</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
+                    <li><a href="https://github.com/Erick-Tx">@github_Erick-Tx</a></li>
                     <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
