--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
                 </h2>
                 <ul>
                     <li><a href="https://github.com/Erick-Tx">@github_Erick-Tx</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://www.linkedin.com/in/erick-tequiz/">@linkedin_erick-tequiz</a></li>
+                    <li><a href="https://www.instagram.com/ericktequiz/">@instagram_ericktequiz</a></li>
                 </ul>    
             </section>
             
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>AI</li>
+                    <li>Azure</li>
                 </ul>
             </section>
             <section class="box">
