--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
                 <ul>
                     <li>AI</li>
                     <li>Azure</li>
+                    <li>Github</li>
                 </ul>
             </section>
             <section class="box">
