--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,9 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>AI</li>
-                    <li>Azure</li>
-                    <li>Github</li>
+                    <li>Event speaker</li>
+                    <li>Work with Azure</li>
+                    <li>Work collaboratively on Github</li>
                 </ul>
             </section>
             <section class="box">
@@ -76,8 +76,8 @@
 
                 <h3>TALOV S.A.</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Work with NLP and NLG algorithms.</li>
+                    <li>Use of AI and Machine Learning.</li>
                 </ul>
             </section>
             <section class="box">
@@ -86,11 +86,11 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>BYMER Project - Hult Prize OnCampus Yachay Tech</h3>
+                <div>App that collects in its database all the companies and businesses close to the user depending on their interests and shows them the options in short videos, in order to know said place. This helps the reactivation and market recovery of businesses affected by the pandemic.</div>
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>UX and UI tools, Kotlin, Firebase</li>
+                    <li>BOOTCAMP 2022 Winner</li>
                 </ul>
             </section>
         </article>
